sign req to hops-site

--- a/templates/default/ca-keystore.sh.erb
+++ b/templates/default/ca-keystore.sh.erb
@@ -1,22 +1,21 @@
 #!/bin/bash
 set -e
-cd <%= node[:kagent][:certs_dir] %>
+cd <%= node[:hopssite][:certs_dir] %>
 
 if [ -e "ca_pub.pem" ] && [ -e "priv.key" ] && [ -e "pub.pem" ] ; then
 	KEYSTOREPW=<%= @keystorepass %>
 
 	openssl pkcs12 -export -in pub.pem -inkey priv.key -out cert_and_key.p12 -name <%= node['hostname'] %> -CAfile ca_pub.pem -caname root -password pass:$KEYSTOREPW
-	keytool -importkeystore -destkeystore node_server_keystore.jks -srckeystore cert_and_key.p12 -srcstoretype PKCS12 -alias <%= node['hostname'] %> -srcstorepass $KEYSTOREPW -deststorepass $KEYSTOREPW -destkeypass $KEYSTOREPW
-	keytool -import -noprompt -trustcacerts -alias CARoot -file ca_pub.pem -keystore node_server_keystore.jks -srcstorepass $KEYSTOREPW -deststorepass $KEYSTOREPW -destkeypass $KEYSTOREPW
-	keytool -import -noprompt -trustcacerts -alias CARoot -file ca_pub.pem -keystore node_server_truststore.jks -srcstorepass $KEYSTOREPW -deststorepass $KEYSTOREPW -destkeypass $KEYSTOREPW
-	cp node_server_keystore.jks "<%= @directory %>/node_server_keystore.jks"
-	cp node_server_truststore.jks "<%= @directory %>/node_server_truststore.jks"
-	cp node_server_truststore.jks "<%= @directory %>/node_client_truststore.jks"
-	rm node_server_keystore.jks node_server_truststore.jks cert_and_key.p12 
-        chmod 640 <%= @directory %>/*
-        chmod 750 <%= @directory %>
-        chmod 640 pub.pem ca_pub.pem priv.key
+	keytool -importkeystore -destkeystore keystore.jks -srckeystore cert_and_key.p12 -srcstoretype PKCS12 -alias <%= node['hostname'] %> -srcstorepass $KEYSTOREPW -deststorepass $KEYSTOREPW -destkeypass $KEYSTOREPW
+	keytool -import -noprompt -trustcacerts -alias CARoot -file ca_pub.pem -keystore keystore.jks -srcstorepass $KEYSTOREPW -deststorepass $KEYSTOREPW -destkeypass $KEYSTOREPW
+	keytool -import -noprompt -trustcacerts -alias CARoot -file ca_pub.pem -keystore truststore.jks -srcstorepass $KEYSTOREPW -deststorepass $KEYSTOREPW -destkeypass $KEYSTOREPW
+	cp keystore.jks "<%= @directory %>/keystore.jks"
+	cp truststore.jks "<%= @directory %>/truststore.jks"
+
+	rm keystore.jks truststore.jks cert_and_key.p12
+  chmod 640 <%= @directory %>/*
+  chmod 750 <%= @directory %>
+  chmod 640 pub.pem ca_pub.pem priv.key
 else
   exit 1
 fi
-
