--- a/templates/default/csr-ca.py.erb
+++ b/templates/default/csr-ca.py.erb
@@ -78,7 +78,6 @@ class Register():
                 payload["agent-password"] = ""
                 payload["host-id"] = host_id
                 logger.info("Registering with HopsWorks...")
-                logger.info("Password: {0}".format(agent_password))
                 session = requests.Session()
                 session.post(login_url, data={'email': server_username, 'password': server_password}, headers=form_headers, verify=False)
                 resp = session.post(sign_cert_url, data=json.dumps(payload), headers=json_headers, verify=False)
@@ -167,7 +166,7 @@ config_mutex = Lock()
 
 HTTP_OK = 200
 
-CONFIG_FILE = "<%= node[:hopssite][:certs_dir] %>/ca.ini"
+CONFIG_FILE = "<%= node[:hopssite][:base_dir] %>/config/ca.ini"
 LOG_FILE = "<%= node[:hopssite][:certs_dir] %>/csr.log"
 CERT_FILE = "<%= node[:hopssite][:certs_dir] %>/pub.pem"
 CA_FILE = "<%= node[:hopssite][:certs_dir] %>/ca_pub.pem"
@@ -184,27 +183,8 @@ try:
     sign_cert_url = hopssite_url + config.get('hops-site', 'path-sign-cert')
     server_username = config.get('hops-site', 'username')
     server_password = config.get('hops-site', 'password')
-    retry_interval = config.get('hops-site', 'retry_interval')
-
-    hostname = socket.gethostbyaddr(eth0_ip)[0]
-    host_id = hostname
-
-    public_ip = None
-    private_ip = None
-    eth0_ip = netifaces.ifaddresses(network_interface)[netifaces.AF_INET][0]['addr']
-    if (IP(eth0_ip).iptype() == "PUBLIC"):
-        public_ip = eth0_ip
-    else:
-        private_ip = eth0_ip
-
-    hostname = socket.gethostbyaddr(eth0_ip)[0]
-
-    if (config.has_option("agent", "host-id")):
-        host_id = config.get("agent", "host-id")
-    else:
-        host_id = hostname
-
-
+    retry_interval = config.getfloat('hops-site', 'retry-interval')
+    logging_level = config.get('hops-site', 'logging-level').upper()
 except Exception, e:
     print "Exception while reading {0}: {1}".format(CONFIG_FILE, e)
     sys.exit(1)
@@ -227,10 +207,8 @@ logger.addHandler(logger_file_handler)
 logger.addHandler(logger_stream_handler)
 logger.setLevel(logging.INFO)
 
-logger.info("Hopsworks Csr-Agent started.")
+logger.info("Hopsworks Csr-ca Agent started.")
 logger.info("Register URL: {0}".format(sign_cert_url))
-logger.info("Public IP: {0}".format(public_ip))
-logger.info("Private IP: {0}".format(private_ip))
 
 
 if __name__ == '__main__':
@@ -240,11 +218,11 @@ if __name__ == '__main__':
     if not Cert.exist():
         (csr, key) = Cert.create_key_and_csr()
         Register(csr, key) # Registering with the dashboard
-        subprocess.call("<%= node[:hopssite][:base_dir] %>/ca-keystore.sh")
+        subprocess.call("<%= node[:hopssite][:base_dir] %>/bin/ca-keystore.sh")
     else:
         logger.info('Certificate files exist. Already registered. Skipping registration phase.')
 
     if not Cert.existsKeystore():
-        subprocess.call("<%= node[:hopssite][:base_dir] %>/ca-keystore.sh")
+        subprocess.call("<%= node[:hopssite][:base_dir] %>/bin/ca-keystore.sh")
     else:
         logger.info('Keystore files found.')
