--- a/templates/default/ca.ini.erb
+++ b/templates/default/ca.ini.erb
@@ -1,8 +1,9 @@
 [hops-site]
-url = <%= node["hopssite"]["url"] %>
-path-login = hopsworks-api/api/auth/login
-path-register = hopsworks-ca/ca/agentservice/register
-username = <%= node["hopssite"]["user"] %>
-password = <%= node["hopssite"]["password"] %>
-
-
+url = <%= node[:hopssite][:url] %>
+path-login = /hopsworks-api/api/auth/login
+path-sign-cert = /hopsworks-ca/ca/agentservice/hopsworks
+username = <%= node[:hopssite][:user] %>
+password = <%= node[:hopssite][:password] %>
+retry-interval = <%= node[:hopssite][:retry_interval] %>
+max-retries = <%= node[:hopssite][:max_retries] %>
+logging-level = "INFO"
