fix on hopsworks register

--- a/templates/default/ca.ini.erb
+++ b/templates/default/ca.ini.erb
@@ -7,3 +7,10 @@ password = <%= node['hopssite']['password'] %>
 retry-interval = <%= node['hopssite']['retry_interval'] %>
 max-retries = <%= node['hopssite']['max_retries'] %>
 logging-level = "INFO"
+cert_c = <%= node['hopssite']['cert']['c'] %>
+cert_cn = <%= node['hopssite']['cert']['cn'] %>
+cert_s = <%= node['hopssite']['cert']['s'] %>
+cert_l = <%= node['hopssite']['cert']['l'] %>
+cert_o = <%= node['hopssite']['cert']['o'] %>
+cert_ou = <%= node['hopssite']['cert']['ou'] %>
+cert_email = <%= node['hopssite']['cert']['email'] %>
