--- a/templates/default/sql/dml/undo/2.3.0__undo.sql.erb
+++ b/templates/default/sql/dml/undo/2.3.0__undo.sql.erb
@@ -4,3 +4,16 @@ DELETE FROM `hopsworks`.`variables` WHERE `id`='enable_user_search';
 DELETE FROM `hopsworks`.`variables` WHERE `id`='kube_api_max_attempts';
 
 DELETE FROM `hopsworks`.`variables` WHERE `id`='onlinefs_service_thread_number';
+
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_host';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_origin_scheme';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_www_address';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_session_timeout_minutes';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_logging_level';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_logger_type';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_log_file_max_size';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_dir';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_user';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_group';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_cran_repo';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_shutdown_timer_interval';
