--- a/templates/default/sql/dml/undo/2.4.0__undo.sql.erb
+++ b/templates/default/sql/dml/undo/2.4.0__undo.sql.erb
@@ -10,3 +10,16 @@ DELETE FROM `hopsworks`.`variables` WHERE id="kibana_service_log_viewer";
 
 DELETE FROM `hopsworks`.`variables` WHERE `id`='reject_remote_user_no_group';
 DELETE FROM `hopsworks`.`variables` WHERE `id`='managed_cloud_redirect_uri';
+
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_host';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_origin_scheme';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_www_address';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_session_timeout_minutes';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_logging_level';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_logger_type';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_log_file_max_size';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_dir';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_user';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_group';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_cran_repo';
+DELETE FROM `hopsworks`.`variables` WHERE `id`='rstudio_shutdown_timer_interval';
