--- a/templates/default/sql/dml/3.4.0.sql.erb
+++ b/templates/default/sql/dml/3.4.0.sql.erb
@@ -33,3 +33,16 @@ REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("multiregion_watchdo
 REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("multiregion_watchdog_interval", "<%= node['hops']['alive-watchdog']['interval'] %>");
 REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("multiregion_watchdog_url", "<%= node['hops']['alive-watchdog']['http-poll']['url'] %>");
 REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("multiregion_watchdog_region", "<%= node['hops']['alive-watchdog']['json-poll']['dc-id'] %>");
+
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_host", "<%= node['hopsworks']['rstudio_host'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_origin_scheme", "<%= node['hopsworks']['rstudio_origin_scheme'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_www_address", "<%= node['hopsworks']['rstudio_www_address'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_session_timeout_minutes", "<%= node['hopsworks']['rstudio_session_timeout_minutes'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_logging_level", "<%= node['hopsworks']['rstudio_logging_level'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_logger_type", "<%= node['hopsworks']['rstudio_logger_type'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_log_file_max_size", "<%= node['hopsworks']['rstudio_log_file_max_size'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_dir", "<%= node['hopsworks']['rstudio_dir'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_user", "<%= node['hops']['yarnapp']['user'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_group", "<%= node['hops']['group'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_cran_repo", "<%= node['hopsworks']['rstudio_cran_repo'] %>");
+REPLACE INTO `hopsworks`.`variables`(`id`, `value`) VALUES ("rstudio_shutdown_timer_interval", "<%= node['rstudio']['shutdown_timer_interval'] %>");
